uf-10211: Fixed PR comments.